--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,158 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="widht=device-widht, initial-scale=1.0">
+  <title>CYCLING NEWS</title>
+  <link rel="stylesheet" href="./style.css">
+  <!-- Meta tag for responsive site-->
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+  <div class="wrapper">
+    <header class="header">
+
+      <nav class="navigation">
+        <p>CYCLING NEWS</p>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </nav>
+  </div>
+  </header>
+  <section class="main-news">
+    <div class="big-image">
+      <img src="./IMAGES/aditya-wardhana-LFv9vVBLmwM-unsplash.jpg" width="100%">
+    </div>
+    <div class="main-text">
+      <h1>Cycling</h1>
+      <p>
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+        Cycling news
+      </p>
+    </div>
+  </section>
+  <h1>THE LATEST NEWS ABOUT CYCLING</h1>
+</body>
+<section class="more-news">
+  <div class="title">
+  </div>
+  <div class="box">
+    <div class="card">
+      <div class="card-image">
+        <img src="./IMAGES/viktor-bystrov-Gi0OMNguFaw-unsplash.jpg" width=" 100%">
+      </div>
+      <h2>More cycling news</h2>
+    </div>
+
+    <div class="card">
+      <div class="card-image">
+        <img src="./IMAGES/polina-rytova-CsAHZVYzpZo-unsplash.jpg" width="100%">
+      </div>
+      <h2>More cycling news</h2>
+    </div>
+
+    <div class="card">
+      <div class="card-image">
+        <img src="./IMAGES/hannes-glockl-5-3-Rjd0d_U-unsplash.jpg" width="100%">
+      </div>
+      <h2>More cycling news</h2>
+    </div>
+
+    <div class="card">
+      <div class="card-image">
+        <img src="./IMAGES/hannes-glockl-5-3-Rjd0d_U-unsplash.jpg" width="100%">
+      </div>
+      <h2>More cycling news</h2>
+    </div>
+  </div>
+</section>
+
+<section class="more-news">
+  <div class="box">
+    <div class="card">
+      <div class="card-image">
+        <img src="./IMAGES/maico-amorim-SJWPKMb9u-k-unsplash.jpg" width="100%">
+      </div>
+      <h2>More cycling news</h2>
+    </div>
+
+    <div class="card">
+      <div class="card-image">
+        <img src="./IMAGES/markus-spiske-WUehAgqO5hE-unsplash (1).jpg" width="100%">
+      </div>
+      <h2>More cycling news</h2>
+    </div>
+
+    <div class="card">
+      <div class="card-image">
+        <img src="./IMAGES/josh-nuttall-uNQ-TTg_qNY-unsplash.jpg" width="100%">
+      </div>
+
+      <h2>More cycling news</h2>
+    </div>
+
+    <div class="card">
+      <div class="card-image">
+        <img src="./IMAGES/polina-rytova-CsAHZVYzpZo-unsplash.jpg" width="100%">
+      </div>
+      <h2>More cycling news</h2>
+    </div>
+  </div>
+</section>
+<footer>
+  <div class="footer">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Contact Us</a></li>
+    </ul>
+    <p>Copyright &copy;2024; Axel Hellners First project Technigo spring 2024</p>
+    <button>Test</button>
+  </div>
+</footer>
+
 </html>
