fixed images folder and uppdated code in html after this

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
   <header class="header">
     <!-- Navigation bar relative URLs, img and h1 -->
     <nav class="navigation-bar-img">
-      <img src="instagram-logo.png" alt="black-and-white-instagram-logo" width="30px" height="30px">
+      <img src="images/instagram-logo.png" alt="black-and-white-instagram-logo" width="30px" height="30px">
     </nav>
     <!-- <nav>
             <a href="#about" class="about">About</a>
@@ -53,33 +53,34 @@
       Also, wouldn’t in be cool to have a function where you can continue brainstorming on this website?
     </p>
     <div class="nested-grid">
-      <img src="image0 (kopia).jpeg" alt="picture of question box" width="200px" height="120px" class="pic-box-grid">
+      <img src="images/image0 (kopia).jpeg" alt="picture of question box" width="200px" height="120px"
+        class="pic-box-grid">
       <button class="brainstorm-button">Brainstorm with me!</button>
     </div>
   </section>
 
   <section class="instagram-story-img-box">
     <div class="instagram-story-img">
-      <img src="hemulen.jpg" alt="picture-of-hemulen-text" height="100px" width="100px">
-      <img src="CVI.jpg" alt="picture-of-cvi-text" height="100px" width="100px">
-      <img src="friggebodar.jpg" alt="picture-of-friggebodar-text" height="100px" width="100px">
-      <img src="ekar.jpg" alt="picture-of-ekar-text" height="100px" width="100px">
-      <img src="harry-styes.jpg" alt="picture-of-harrystyles-text" height="100px" width="100px">
-      <img src="invasiva-arter.jpg" alt="picture-of-invasiva-text" height="100px" width="100px">
-      <img src="isbad.jpg" alt="picture-of-isbad-text" height="100px" width="100px">
-      <img src="komododrakar.jpg" alt="picture-of-komododrakar-text" height="100px" width="100px">
-      <img src="kvalitativa-vetenskapliga-metoder.jpg" alt="picture-of-kvm-text" height="100px" width="100px">
-      <img src="mensvärk.jpg" alt="picture-of-mensvärk-text" height="100px" width="100px">
-      <img src="mussor.jpg" alt="picture-of-musslor-text" height="100px" width="100px">
-      <img src="träd.jpg" alt="picture-of-träd-text" height="100px" width="100px">
-      <img src="renar.jpg" alt="picture-of-renar-text" height="100px" width="100px">
-      <img src="perfekta-jobbet.jpg" alt="picture-of-perfektajobbet-text" height="100px" width="100px">
-      <img src="träd-skåningar.jpg" alt="picture-of-trädskåne-text" height="100px" width="100px">
-      <img src="vikingar.jpg" alt="picture-of-vikingar-text" height="100px" width="100px">
-      <img src="Twin-peaks.jpg" alt="picture-of-twinpeaks-text" height="100px" width="100px">
-      <img src="pandor.jpg" alt="picture-of-pandor-text" height="100px" width="100px">
-      <img src="sengångare.jpg" alt="picture-of-sengångare-text" height="100px" width="100px">
-      <button class="idea-button">View more ideas!</button>
+      <img src="images/hemulen.jpg" alt="picture-of-hemulen-text" height="100px" width="100px">
+      <img src="images/CVI.jpg" alt="picture-of-cvi-text" height="100px" width="100px">
+      <img src="images/friggebodar.jpg" alt="picture-of-friggebodar-text" height="100px" width="100px">
+      <img src="images/ekar.jpg" alt="picture-of-ekar-text" height="100px" width="100px">
+      <img src="images/harry-styes.jpg" alt="picture-of-harrystyles-text" height="100px" width="100px">
+      <img src="images/invasiva-arter.jpg" alt="picture-of-invasiva-text" height="100px" width="100px">
+      <img src="images/isbad.jpg" alt="picture-of-isbad-text" height="100px" width="100px">
+      <img src="images/komododrakar.jpg" alt="picture-of-komododrakar-text" height="100px" width="100px">
+      <img src="images/kvalitativa-vetenskapliga-metoder.jpg" alt="picture-of-kvm-text" height="100px" width="100px">
+      <img src="images/mensvärk.jpg" alt="picture-of-mensvärk-text" height="100px" width="100px">
+      <img src="images/mussor.jpg" alt="picture-of-musslor-text" height="100px" width="100px">
+      <img src="images/träd.jpg" alt="picture-of-träd-text" height="100px" width="100px">
+      <img src="images/renar.jpg" alt="picture-of-renar-text" height="100px" width="100px">
+      <img src="images/perfekta-jobbet.jpg" alt="picture-of-perfektajobbet-text" height="100px" width="100px">
+      <img src="images/träd-skåningar.jpg" alt="picture-of-trädskåne-text" height="100px" width="100px">
+      <img src="images/vikingar.jpg" alt="picture-of-vikingar-text" height="100px" width="100px">
+      <img src="images/Twin-peaks.jpg" alt="picture-of-twinpeaks-text" height="100px" width="100px">
+      <img src="images/pandor.jpg" alt="picture-of-pandor-text" height="100px" width="100px">
+      <img src="images/sengångare.jpg" alt="picture-of-sengångare-text" height="100px" width="100px">
+      <button class="images/idea-button">View more ideas!</button>
     </div>
   </section>
   <footer>
