re-did styling from scratch to fix responsiveness

--- a/code/index.html
+++ b/code/index.html
@@ -11,24 +11,21 @@
 </head>
 
 <body>
-  <header class="header">
-    <!-- Navigation bar relative URLs, img and h1 -->
-    <nav class="navigation-bar-img">
-      <img src="images/instagram-logo.png" alt="black-and-white-instagram-logo" width="30px" height="30px">
-    </nav>
-    <!-- <nav>
-            <a href="#about" class="about">About</a>
-            <a href="#more-ideas" class="more-ideas">More ideas</a>
-            <a href="#your-turn" class="your-turn">Your turn!</a>
-        </nav> -->
-    <nav class="navigation-bar">
-      <a href="#about" class="about">About</a>
-      <a href="#more-ideas" class="more-ideas">More ideas</a>
-      <a href="#your-turn" your-turn>Your turn!</a>
-    </nav>
-    <nav class="navigation-bar-title">
+  <!-- Header and navigation bar relative URLs, img and h1 -->
+  <header>
+    <div class="header">
+      <nav class="header-img">
+        <img src="images/instagram-logo.png" alt="black-and-white-instagram-logo" width="30px" height="30px">
+      </nav>
+      <nav class="navigation-bar">
+        <a href="#about" class="about">About</a>
+        <a href="#more-ideas" class="more-ideas">More ideas</a>
+        <a href="#your-turn" your-turn>Your turn!</a>
+      </nav>
+      <!-- <div class="navigation-bar-title"> -->
       <h1>The Brainstorming Project!</h1>
-    </nav>
+      <!-- </div> -->
+    </div>
   </header>
 
   <section class="text-box-grid">
@@ -52,10 +49,12 @@
       right?
       Also, wouldn’t in be cool to have a function where you can continue brainstorming on this website?
     </p>
-    <div class="nested-grid">
-      <img src="images/image0 (kopia).jpeg" alt="picture of question box" width="200px" height="120px"
-        class="pic-box-grid">
-      <button class="brainstorm-button">Brainstorm with me!</button>
+    <div class="brainstorm-button">
+      <button>Brainstorm with me!</button>
+    </div>
+    <!-- <div class="nested-grid"> -->
+    <div class="question-box">
+      <img src="images/image0 (kopia).jpeg" alt="picture of question box" width="200px" height="120px">
     </div>
   </section>
 
