worked on responsiveness

--- a/code/index.html
+++ b/code/index.html
@@ -22,14 +22,16 @@
         <a href="#more-ideas" class="more-ideas">More ideas</a>
         <a href="#your-turn" your-turn>Your turn!</a>
       </nav>
-      <!-- <div class="navigation-bar-title"> -->
       <h1>The Brainstorming Project!</h1>
-      <!-- </div> -->
     </div>
   </header>
-
-  <section class="text-box-grid">
-    <p>In the early days of 2024, when people where still eating leftovers from Christmas and realizing how
+  <div>
+    <button class="brainstorm-button">Brainstorm with me!</button>
+  </div>
+  <!-- text-section -->
+  <section>
+    <p class="text">In the early days of 2024, when people where still eating leftovers from Christmas and
+      realizing how
       poor they
       where after splurging throughout December even though society was in the middle of the next global Great
       Depression™ a few people in Sweden entered a project that wasn’t a project until... it was a project.<br>
@@ -49,37 +51,36 @@
       right?
       Also, wouldn’t in be cool to have a function where you can continue brainstorming on this website?
     </p>
-    <div class="brainstorm-button">
-      <button>Brainstorm with me!</button>
-    </div>
-    <!-- <div class="nested-grid"> -->
-    <div class="question-box">
-      <img src="images/image0 (kopia).jpeg" alt="picture of question box" width="200px" height="120px">
-    </div>
   </section>
-
-  <section class="instagram-story-img-box">
+  <!-- picture section -->
+  <!-- first five pic visible on mobile with class="mobile" -->
+  <section>
+    <div class="mobile">
+      <img src="images/image0 (kopia).jpeg" alt="picture of question box" width="200px" height="120px">
+      <img src="images/hemulen.jpg" alt="picture-of-hemulen-text" height="200px" width="200px">
+      <img src="images/CVI.jpg" alt="picture-of-cvi-text" height="200px" width="200px">
+      <img src="images/friggebodar.jpg" alt="picture-of-friggebodar-text" height="200px" width="200px">
+      <img src="images/ekar.jpg" alt="picture-of-ekar-text" height="200px" width="200px">
+      <img src="images/harry-styes.jpg" alt="picture-of-harrystyles-text" height="200px" width="200px">
+    </div>
     <div class="instagram-story-img">
-      <img src="images/hemulen.jpg" alt="picture-of-hemulen-text" height="100px" width="100px">
-      <img src="images/CVI.jpg" alt="picture-of-cvi-text" height="100px" width="100px">
-      <img src="images/friggebodar.jpg" alt="picture-of-friggebodar-text" height="100px" width="100px">
-      <img src="images/ekar.jpg" alt="picture-of-ekar-text" height="100px" width="100px">
-      <img src="images/harry-styes.jpg" alt="picture-of-harrystyles-text" height="100px" width="100px">
-      <img src="images/invasiva-arter.jpg" alt="picture-of-invasiva-text" height="100px" width="100px">
-      <img src="images/isbad.jpg" alt="picture-of-isbad-text" height="100px" width="100px">
-      <img src="images/komododrakar.jpg" alt="picture-of-komododrakar-text" height="100px" width="100px">
-      <img src="images/kvalitativa-vetenskapliga-metoder.jpg" alt="picture-of-kvm-text" height="100px" width="100px">
-      <img src="images/mensvärk.jpg" alt="picture-of-mensvärk-text" height="100px" width="100px">
-      <img src="images/mussor.jpg" alt="picture-of-musslor-text" height="100px" width="100px">
-      <img src="images/träd.jpg" alt="picture-of-träd-text" height="100px" width="100px">
-      <img src="images/renar.jpg" alt="picture-of-renar-text" height="100px" width="100px">
-      <img src="images/perfekta-jobbet.jpg" alt="picture-of-perfektajobbet-text" height="100px" width="100px">
-      <img src="images/träd-skåningar.jpg" alt="picture-of-trädskåne-text" height="100px" width="100px">
-      <img src="images/vikingar.jpg" alt="picture-of-vikingar-text" height="100px" width="100px">
-      <img src="images/Twin-peaks.jpg" alt="picture-of-twinpeaks-text" height="100px" width="100px">
-      <img src="images/pandor.jpg" alt="picture-of-pandor-text" height="100px" width="100px">
-      <img src="images/sengångare.jpg" alt="picture-of-sengångare-text" height="100px" width="100px">
-      <button class="images/idea-button">View more ideas!</button>
+      <img src="images/invasiva-arter.jpg" alt="picture-of-invasiva-text" height="200px" width="200px">
+      <img src="images/isbad.jpg" alt="picture-of-isbad-text" height="200px" width="200px">
+      <img src="images/komododrakar.jpg" alt="picture-of-komododrakar-text" height="200px" width="200px">
+      <img src="images/kvalitativa-vetenskapliga-metoder.jpg" alt="picture-of-kvm-text" height="200px" width="200px">
+      <img src="images/mensvärk.jpg" alt="picture-of-mensvärk-text" height="200px" width="200px">
+      <img src="images/mussor.jpg" alt="picture-of-musslor-text" height="200px" width="200px">
+      <img src="images/träd.jpg" alt="picture-of-träd-text" height="200px" width="200px">
+      <img src="images/renar.jpg" alt="picture-of-renar-text" height="200px" width="200px">
+      <img src="images/perfekta-jobbet.jpg" alt="picture-of-perfektajobbet-text" height="200px" width="200px">
+      <img src="images/träd-skåningar.jpg" alt="picture-of-trädskåne-text" height="200px" width="200px">
+      <img src="images/vikingar.jpg" alt="picture-of-vikingar-text" height="200px" width="200px">
+      <img src="images/Twin-peaks.jpg" alt="picture-of-twinpeaks-text" height="200px" width="200px">
+      <img src="images/pandor.jpg" alt="picture-of-pandor-text" height="200px" width="200px">
+      <img src="images/sengångare.jpg" alt="picture-of-sengångare-text" height="200px" width="200px">
+    </div>
+    <div class="mobile">
+      <button class="idea-button">View more ideas! Click here!</button>
     </div>
   </section>
   <footer>
