--- a/code/index.html
+++ b/code/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="head-news-text">
                 <div class="head-news-headline">
-                    <h1>BREAKING NEWS!</h1>
+                    <h1>BREAKING NEWS!!</h1>
                 </div>
                 <div class="head-news-intro">
                     <p>Today 3M unveiled their newest trendy color addition to their classic Post-it collection. </p>
