update deloy link

--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,167 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="icon" type="image/png" href="./assets/icons8-fish-16.png">
+  <title>Fish New</title>
+</head>
+
+<body>
+
+  <div class="container">
     <header>
-      <!-- Some kind of logo and navbar -->
+      <nav>
+        <ul class="logo">
+          <li><a href=""><i class="fa-solid fa-fish-fins"></i></a></li>
+          <li><a href="">
+              <h1>Fish News</h1>
+            </a></li>
+        </ul>
+        <ul class="nav-bar">
+          <li><a href="">
+              <h3>Home</h3>
+            </a></li>
+          <li><a href="">
+              <h3>Society</h3>
+            </a></li>
+          <li><a href="">
+              <h3>Sport</h3>
+            </a></li>
+          <li><a href="">
+              <h3>Culture</h3>
+            </a></li>
+          <li><a href="">
+              <h3>Contact</h3>
+            </a></li>
+        </ul>
+      </nav>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    <main>
+      <section class="feature">
+        <div class="feature-text">
+          <a href="" class="feature-link">
+            <h2>Get ready for the Jellyfish Full Moon Party</h2>
+            <h4>The biggest one in history!</h4>
+            <p> With dazzling lights and lively music, this event promises a night of unforgettable fun...
+            </p>
+          </a>
+          <a class="read-more" href="">
+            Read More
+          </a>
+        </div>
+      </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+      <section class="news-cards">
+
+        <div class="card">
+          <a href="" class="card-img-link">
+            <img src="./assets/Artboard 1.jpg" alt="Mudskipper marathon">
+          </a>
+          <a href="" class="card-text-link">
+            <h5>Mudskipper Marathon: Unforgettable Victories Unfold</h5>
+          </a>
+
+        </div>
+
+        <div class="card">
+          <a href="" class="card-img-link">
+            <img src="./assets/Artboard 7.jpg" alt="Top sunbathing spots">
+          </a>
+          <a href="" class="card-text-link">
+            <h5>Seastar Unveils Top Sunbathing Spots for Ultimate Relaxation</h5>
+          </a>
+
+
+        </div>
+
+        <div class="card">
+          <a href="" class="card-img-link">
+            <img src="./assets/Artboard 4.jpg" alt="Puffer fish won the nest design prize">
+          </a>
+          <a href="" class="card-text-link">
+            <h5>Puffer Fish Claims The Prize for Outstanding Nest Design</h5>
+          </a>
+        </div>
+
+        <div class="card">
+          <a href="" class="card-img-link">
+            <img src="./assets/Artboard 3.jpg" alt="Crabs work as spike barbers">
+          </a>
+          <a href="" class="card-text-link">
+            <h5>Rising Ocean Trend: Crabs Landing Jobs as Spike Barbers</h5>
+          </a>
+        </div>
+
+        <div class="card">
+          <a href="" class="card-img-link">
+            <img src="./assets/Artboard 5.jpg" alt="Unidentified Fish Object (UFO)">
+          </a>
+          <a href="" class="card-text-link">
+            <h5>Unidentified Fish Object (UFO) Captured in Photograph!</h5>
+          </a>
+        </div>
+
+        <div class="card">
+          <a href="" class="card-img-link">
+            <img src="./assets/Artboard 2.jpg" alt="Coral home">
+          </a>
+          <a href="" class="card-text-link">
+            <h5>TV Premier! Discovering Your Dream Coral Home</h5>
+          </a>
+        </div>
+
+        <div class="card">
+          <a href="" class="card-img-link">
+            <img src="./assets/Artboard 6.jpg" alt="Star plankto">
+          </a>
+          <a href="" class="card-text-link">
+            <h5>Star Nursery Launched: Perfect for Your Little Plankton Darlings</h5>
+          </a>
+        </div>
+
+        <div class="card">
+          <a href="" class="card-img-link">
+            <img src="./assets/Artboard 8.jpg" alt="Latest oceanic fashion trends of the year">
+          </a>
+          <a href="" class="card-text-link">
+            <h5>Dive into the Latest Oceanic Fashion Trends of the Year</h5>
+          </a>
+        </div>
+
+      </section>
+
+
+    </main>
+
+    <footer>
+      <div class="info">
+        <p>Created by Yifan Wang</p>
+        <img src="./logo.svg" alt="Technigo logo">
+      </div>
+      <div class="social-media">
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-github"></i></a>
+      </div>
+    </footer>
+
+    <div class="dot1"></div>
+    <div class="dot2"></div>
+    <div class="dot3"></div>
+    <div class="dot4"></div>
+    <div class="dot5"></div>
+    <div class="dot6"></div>
+
+  </div>
+
+</body>
+
 </html>
